structure updated dockerfile added
